--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,11 @@ dependencies {
 
 //  Extended library of google icons
     implementation 'androidx.compose.material:material-icons-extended:1.6.7'
+
+//  navigation
+    implementation("androidx.navigation:navigation-fragment-ktx:2.7.7")
+    implementation("androidx.navigation:navigation-ui-ktx:2.7.7")
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.7.7")
+    androidTestImplementation("androidx.navigation:navigation-testing:2.7.7")
+    implementation("androidx.navigation:navigation-compose:2.7.7")
 }
