--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -73,4 +74,12 @@ dependencies {
     implementation("androidx.navigation:navigation-dynamic-features-fragment:2.7.7")
     androidTestImplementation("androidx.navigation:navigation-testing:2.7.7")
     implementation("androidx.navigation:navigation-compose:2.7.7")
+
+//  firebase
+    implementation(platform("com.google.firebase:firebase-bom:33.1.0"))
+    implementation "androidx.navigation:navigation-fragment-ktx:2.7.7"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.7"
+    implementation("androidx.navigation:navigation-compose:2.7.7")
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation("com.google.firebase:firebase-auth")
 }
