--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,7 @@ dependencies {
     implementation("androidx.navigation:navigation-compose:2.7.7")
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation("com.google.firebase:firebase-auth")
+    implementation ("com.google.firebase:firebase-firestore-ktx")
+    implementation ("com.google.firebase:firebase-analytics")
+    implementation ("com.google.firebase:firebase-database")
 }
