--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
     implementation ("com.google.firebase:firebase-firestore-ktx")
     implementation ("com.google.firebase:firebase-analytics")
     implementation ("com.google.firebase:firebase-database")
+
+//  lifecycle-aware observers
+    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.2")
 }
