--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+
 //  Extended library of google icons
     implementation 'androidx.compose.material:material-icons-extended:1.6.7'
 
